# voronoi

./: CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt  test_voronoi.cpp  timer.h
